--- a/test2.html
+++ b/test2.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="index.css" />
     <title>LIFF Starter</title>
 
     <script src="./test.js"></script>
@@ -14,8 +13,7 @@
 <script></script>
 
 <body>
-    <div class="home">
-    </div>
+    aaaa
 </body>
 
 </html>
