--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="home__badges__badge badge--primary"> LIFF Starter </span>
             <span class="home__badges__badge badge--secondary"> vanilla </span>
             <span class="home__badges__badge badge--tertiary"> 0.1.0 </span>
-            <a href="https://steady-bunny-f448cd.netlify.app/test.html" target="_blank" rel="noreferrer" class="home__badges__badge badge--secondary">
+            <a href="https://steady-bunny-f448cd.netlify.app/test2.html" target="_blank" rel="noreferrer" class="home__badges__badge badge--secondary">
                 test
             </a>
         </div>
